--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,18 +1,9 @@
-apiVersion: skaffold/v1alpha4
+apiVersion: skaffold/v1alpha5
 kind: Config
 build:
   artifacts:
-  - image: gcr.io/appu-learn/demo-talk
+  - image: coollog/skaffold-demo
     context: app
-deploy:
-  kubectl:
-    manifests:
-      - k8s-*
-
-profiles:
-  - name: gcb
-    build:
-      tagPolicy:
-        dateTime: {}
-      googleCloudBuild:
-        projectId: appu-learn
+    jibGradle: {}
+  local:
+    push: true
