--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@
 
 plugins {
   id 'java'
-  id 'com.google.cloud.tools.jib' version '0.9.13'
+  id 'com.google.cloud.tools.jib' version '1.0.0-rc2'
 }
 
 repositories {
